Bug 520209 - active tab indication is too subtle / cannot see the tab focus outline (activity, contrast, invisible) [r=gavin.sharp]
UltraBlame original commit: 2ebc8e493c7fdf0bdcd3b655fa49590f5430f968

--- a/mobile/themes/wince/browser-high.css
+++ b/mobile/themes/wince/browser-high.css
@@ -2762,6 +2762,216 @@ png
 )
 ;
 }
+/
+*
+Left
+sidebar
+(
+tabs
+)
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+*
+/
+box
+[
+type
+=
+"
+documenttab
+"
+]
+.
+documenttab
+-
+canvas
+{
+/
+*
+keep
+the
+unselected
+thumbnails
+aligned
+with
+the
+selected
+one
+*
+/
+border
+:
+8px
+solid
+#
+36373b
+;
+}
+box
+[
+type
+=
+"
+documenttab
+"
+]
+[
+selected
+=
+"
+true
+"
+]
+.
+documenttab
+-
+canvas
+{
+border
+:
+8px
+solid
+;
+-
+moz
+-
+border
+-
+radius
+:
+3px
+;
+-
+moz
+-
+border
+-
+top
+-
+colors
+:
+#
+8db8d8
+#
+8db8d8
+#
+8db8d8
+#
+8db8d8
+#
+36373b
+;
+-
+moz
+-
+border
+-
+right
+-
+colors
+:
+#
+8db8d8
+#
+8db8d8
+#
+8db8d8
+#
+8db8d8
+#
+36373b
+;
+-
+moz
+-
+border
+-
+bottom
+-
+colors
+:
+#
+8db8d8
+#
+8db8d8
+#
+8db8d8
+#
+8db8d8
+#
+36373b
+;
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+#
+8db8d8
+#
+8db8d8
+#
+8db8d8
+#
+8db8d8
+#
+36373b
+;
+}
 box
 [
 type
