--- a/mobile/themes/wince/browser-low.css
+++ b/mobile/themes/wince/browser-low.css
@@ -2834,6 +2834,139 @@ documenttab
 .
 documenttab
 -
+canvas
+{
+/
+*
+keep
+the
+unselected
+thumbnails
+aligned
+with
+the
+selected
+one
+*
+/
+border
+:
+4px
+solid
+#
+36373b
+;
+}
+box
+[
+type
+=
+"
+documenttab
+"
+]
+[
+selected
+=
+"
+true
+"
+]
+.
+documenttab
+-
+canvas
+{
+border
+:
+4px
+solid
+;
+-
+moz
+-
+border
+-
+radius
+:
+3px
+;
+-
+moz
+-
+border
+-
+top
+-
+colors
+:
+#
+8db8d8
+#
+8db8d8
+#
+36373b
+;
+-
+moz
+-
+border
+-
+right
+-
+colors
+:
+#
+8db8d8
+#
+8db8d8
+#
+36373b
+;
+-
+moz
+-
+border
+-
+bottom
+-
+colors
+:
+#
+8db8d8
+#
+8db8d8
+#
+36373b
+;
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+#
+8db8d8
+#
+8db8d8
+#
+36373b
+;
+}
+box
+[
+type
+=
+"
+documenttab
+"
+]
+.
+documenttab
+-
 close
 {
 width
