--- a/mobile/themes/wince/browser.css
+++ b/mobile/themes/wince/browser.css
@@ -3240,79 +3240,11 @@ documenttab
 -
 canvas
 {
-/
-*
-keep
-the
-unselected
-thumbnails
-aligned
-with
-the
-selected
-one
-*
-/
-border
-:
-0
-.
-8mm
-solid
-#
-36373b
-;
 background
 -
 color
 :
 white
-;
-}
-box
-[
-type
-=
-"
-documenttab
-"
-]
-[
-selected
-=
-"
-true
-"
-]
-.
-documenttab
--
-canvas
-{
-border
-:
-0
-.
-8mm
-solid
-#
-0c0d10
-;
-/
-*
-very
-dark
-border
-*
-/
--
-moz
--
-border
--
-radius
-:
-4px
 ;
 }
 box
